# autoban

./: README.md  autoban.py  banlist.txt  entry_points.txt  setup.cfg  uniquelist.py
autoban/: autoban.py  logger.py  tools.py
