[metadata]
name = Autoban
author = Xornotor
description = A script for banning annoying Twitch bots.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
entry_points = file:entry_points.txt
install_requires =
    pynput
setup_requires = setuptools_scm
python_requires = >=3.7
include_package_data = True
